--- a/src/css/chat-message.css
+++ b/src/css/chat-message.css
@@ -3,7 +3,7 @@
 }
 
 .chat-message_default {
-    @apply bg-white rounded-20 outline-[1.5px] outline-white/17;
+    @apply bg-white rounded-20;
     @apply p-4.5 2xl:px-4.5 2xl:py-5;
 
     @apply text-slate-430 font-bold;
