--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -119,7 +119,7 @@
                 </div>
                 <div class="flex flex-1 items-end justify-end lg:justify-center pb-4.5 lg:pb-6 max-lg:mt-[76px]">
                     <a href="#"
-                       class="contact-block__play contact-block__play_lb xl:contact-block__play_lt rotate-2 xl:rotate-8 text-blue-600 hover:text-blue-620 hover:bg-blue-50 hover:after:bg-blue-50"
+                       class="contact-block__play contact-block__play_dima contact-block__play_lb xl:contact-block__play_lt rotate-2 xl:rotate-8"
                        data-modal="video" data-target="#modal-video-dima">
                         <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
                         <span>40 сек</span>
@@ -311,7 +311,7 @@
                 </div>
                 <div class="flex flex-1 items-end justify-end lg:justify-center pb-4.5 lg:pb-6 max-lg:mt-[76px]">
                     <a href="#"
-                       class="contact-block__play contact-block__play_rt xl:contact-block__play_lt -rotate-3 xl:-rotate-8 text-purple-400 hover:text-purple-600 hover:bg-purple-50 hover:after:bg-purple-50"
+                       class="contact-block__play contact-block__play_tanya contact-block__play_rt xl:contact-block__play_lt -rotate-3 xl:-rotate-8"
                        data-modal="video"
                        data-target="#modal-video-tanya">
                         <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
@@ -455,7 +455,7 @@
                     </div>
                 </div>
                 <div class="flex flex-1 items-end justify-end lg:justify-center pb-4.5 lg:pb-6 max-lg:mt-[76px]">
-                    <a href="#" class="contact-block__play contact-block__play_rb -rotate-3 xl:rotate-8 text-lime-500 hover:text-lime-520 hover:bg-amber-50 hover:after:bg-amber-50" data-modal="video"
+                    <a href="#" class="contact-block__play contact-block__play_olya contact-block__play_rb -rotate-3 xl:rotate-8" data-modal="video"
                        data-target="#modal-video-olya">
                         <i class="icon icon-play-short size-5 xl:size-6 2xl:size-7"></i>
                         <span>20 сек</span>
