--- a/src/templates/includes/footer.html
+++ b/src/templates/includes/footer.html
@@ -163,17 +163,17 @@
                         <label class="form-label">Бюджет</label>
 
                         <div class="chips-group flex flex-col md:flex-row flex-wrap gap-3 md:gap-4">
-                            <label class="chip chip_big flex-1">
+                            <label class="chip chip_big">
                                 <input type="radio" class="hidden" name="budget" value="100k">
                                 <span class="chip-label">от 100 000 ₽</span>
                                 <span class="chip-hint">HTML5-баннер с&nbsp;несколькими&nbsp;ресайзами</span>
                             </label>
-                            <label class="chip chip_big flex-1">
+                            <label class="chip chip_big">
                                 <input type="radio" class="hidden" name="budget" value="500k">
                                 <span class="chip-label">от 500 000 ₽</span>
                                 <span class="chip-hint">Пак&nbsp;баннеров&nbsp;HTML5 для&nbsp;онлайн&nbsp;и&nbsp;наружки</span>
                             </label>
-                            <label class="chip chip_big flex-1">
+                            <label class="chip chip_big">
                                 <input type="radio" class="hidden" name="budget" value="1m">
                                 <span class="chip-label">от 1 млн ₽</span>
                                 <span class="chip-hint">То&nbsp;же,&nbsp;что&nbsp;за&nbsp;500к +&nbsp;3D&nbsp;и&nbsp;лендинг</span>
@@ -663,7 +663,7 @@
 
         <div class="flex flex-nowrap gap-5 2xl:gap-6 col-span-1 md:col-span-2 lg:col-span-1 max-lg:h-[240px] max-md:hidden">
             <!-- footer case container -->
-            <div class="footer-case-container relative rounded-3xl overflow-hidden basis-1/2 lg:basis-381 xl:basis-338 2xl:basis-[61.5%]">
+            <div class="footer-case-container relative rounded-2xl xl:rounded-3xl overflow-hidden basis-1/2 lg:basis-381 xl:basis-338 2xl:basis-[61.5%]">
                 <!-- Начальный кейс -->
                 <a href="#"
                    data-active="true"
@@ -690,7 +690,7 @@
             </div>
 
             <!-- footer review container -->
-            <div class="footer-review-container relative rounded-2xl inset-ring-[1.5px] inset-ring-slate-40 basis-1/2 lg:basis-281 xl:basis-293 2xl:basis-[38.5%] 3xl:basis-[416px]">
+            <div class="footer-review-container relative rounded-2xl xl:rounded-3xl inset-ring-[1.5px] inset-ring-slate-40 basis-1/2 lg:basis-281 xl:basis-293 2xl:basis-[38.5%] 3xl:basis-[416px]">
                 <!-- Начальный отзыв -->
                 <a href="#"
                    data-active="true"
